# astro-calc-api

./: .gitignore  Cargo.toml  README.md  run.sh  sample.env
src/: constants.rs  help.rs  main.rs  query_params.rs
src/calc/: core.rs  dates.rs  lunar_cycles.rs  math_funcs.rs  mod.rs  planet_stations.rs  rise_set_phases.rs  traits.rs  transposed_transitions.rs
src/calc/data/: body_speeds.rs
src/calc/models/: date_info.rs  general.rs  graha_pos.rs  houses.rs
src/calc/settings/: ayanamshas.rs  body_values.rs  house_systems.rs  mod.rs
src/calc/utils/: converters.rs  validators.rs
src/extensions/: mod.rs  swe.rs
src/lib/: julian_date.rs  mod.rs  planet_stations.rs  rise_set_phases.rs  traits.rs  transposed_transitions.rs
src/lib/data/: mod.rs
src/lib/models/: date_info.rs  general.rs  geo_pos.rs  graha_pos.rs  houses.rs  mod.rs
src/lib/settings/: body_values.rs
src/lib/utils/: check_directory.rs  converters.rs  mod.rs
src/routes/: appendix.rs  chart_data.rs  datetime.rs  mod.rs  planet_stations.rs  rise_set_times.rs
