[package]
name = "astro_calc_api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libswe-sys = "0.2.7"
num = "*"
serde = { version = "1.0.102", features = ["derive"] }
actix-web = "4.0.0"
serde_json = "1.0.41"
serde_derive = "1.0.102"
dotenv = "0.15.0"
strum = "0.17.1"
strum_macros = "0.17.1"
libmath = "0.2.1"
num-derive = "0.2"
num-traits = "0.2"
chrono = { version = "0.4.31", features = ["serde"] }
ordered-float = { version = "3.0", default-features = false }
clap = { version = "3.2.5", features = ["derive"] }
rand = "0.8.5"
julian_day_converter = "0.3.2"

